--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1267,12 +1267,13 @@ input, select, textarea {
 				display: none;
 			}
 
-		#header .logo {
-			width: 5.5rem;
-			height: 5.5rem;
-			line-height: 5.5rem;
-			border: solid 1px #ffffff;
-			border-radius: 100%;
+		#header .#logo {
+    			padding: 70px 0 0 0;
+    			overflow: hidden;
+    			background-image: url("images/friendsoflatha.jpg");
+    			background-repeat: no-repeat;
+    			height: 0px !important;
+    			height /**/:70px;
 		}
 
 			#header .logo .icon:before {
